@@ -1,0 +1,23 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:browser="http://namespaces.zope.org/browser"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
+           i18n_domain="Products.EEAPloneAdmin">
+
+
+    <configure zcml:condition="have plone.app.discussion-captcha">
+        <adapter
+            factory=".captcha.CaptchaExtender"
+            provides="plone.z3cform.fieldsets.interfaces.IFormExtender" />
+    </configure>
+
+    <browser:viewlet
+        name="plone.comments"
+        for="Products.CMFCore.interfaces.IContentish"
+        layer="plone.app.discussion.interfaces.IDiscussionLayer"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContent"
+        view="plone.app.layout.globals.interfaces.IViewView"
+        class=".comments.CommentsViewlet"
+        permission="zope2.View"
+        />
+
+</configure>
